[project]
name = "prompt_library"
description = "A ComfyUI node pack for management of larger prompt amounts and prompt variations."
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/hexxacubic/ComfyUI-Prompt_Library"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "hexxacubic"
DisplayName = "ComfyUI-Prompt_Library"
Icon = ""
includes = []
